# FluidSimulator

./: .clang-tidy  .gitignore  .slurm-75293.out.swo  .slurm-75293.out.swp  CMakeLists.txt  Cargo.toml  README.md  build-execute.sh  build.sh  perf-stat-large-1000.fld  run-energy-large.sh  run-energy-small.sh  run-large.sh  run-r5-1000.sh  run-small.sh  run.sh  slurm-67435.out  slurm-70690.out  slurm-70691.out  slurm-70692.out  slurm-70693.out  slurm-70694.out  slurm-70695.out  slurm-70697.out  slurm-70706.out  slurm-70762.out  slurm-70765.out  slurm-70770.out  slurm-70775.out  slurm-70779.out  slurm-75293.out  slurm-75301.out  slurm-75358.out  slurm-75359.out
fluid/: CMakeLists.txt  Cargo.toml  fluid.cpp  fluid.hpp  main.cpp  simulator.cpp  simulator.hpp
fluid/src/: main.rs
ftest/: CMakeLists.txt  ftest.sh  perf-stat-energy-large.out  perf-stat-energy-small.out  perf-stat-large.out  perf-stat-small.out  slurm-80680.out
outs/: large-1000.fld  large-1250.fld  large-1500.fld  large-1750.fld  large-2000.fld  large-2250.fld  large-250.fld  large-2500.fld  large-500.fld  large-750.fld  slurm-72194.out  slurm-72198.out  slurm-72202.out  slurm-72318.out  slurm-72319.out  slurm-72320.out  slurm-72321.out  small-1000.fld  small-1250.fld  small-1500.fld  small-1750.fld  small-2000.fld  small-2250.fld  small-250.fld  small-2500.fld  small-500.fld  small-750.fld
res/: .small-5.txt.swp  final-large-4.fld  final-large-4.txt  final-large.fld  final.fld  final.txt  large-temp.fld  small-1000.fld  small-5.fld  small-temp.fld
res/trz/: parser_trz.py
scripts/: local-perf-stat.sh  remote-perf-stat.sh  run.sh
scripts/cachegrind-results/: WriteCopying.out  WriteCopyingDetails.out
scripts/local/: perf-stat.sh  run.sh
scripts/perf-outputs/: 1-EscribirUsandoPunteros.txt  2-EscribirCopiando.txt  RepositioningPerf.out  ResultsCopying.out  ResultsWithPointers.out  SoA-->AoS.txt
scripts/remote/: build-debug.sh  cachegrind.sh  perf-stat.sh  run.sh
sim/: .simulator.hpp.swp  CMakeLists.txt  block.cpp  block.hpp  constants.hpp  error.hpp  fld.cpp  fld.hpp  grid.cpp  grid.hpp  proargs.cpp  proargs.hpp  simulator.cpp  simulator.hpp
sim/args/: proargs.cpp  proargs.hpp
sim/file/: fld.cpp  fld.hpp
sim/grid/: .grid.cpp.swp  block.cpp  block.hpp  grid.cpp  grid.hpp  particle.cpp  particle.hpp
sim/math/: math.cpp  math.hpp  vector.cpp  vector.hpp
sim/src/: grid.rs  lib.rs  proargs.rs  simulator.rs
sim/src/grid/: block.rs
sim/utils/: constants.hpp  error.hpp  vector.cpp  vector.hpp
test/: CMakeLists.txt
test/ftest/: CMakeLists.txt
test/utest/: CMakeLists.txt  proargs_test.cpp
trz/small/txt/: acctransf-base-2.txt  acctransf-base-3.txt  boundint-base-1.txt  boundint-base-4.txt  boundint-base-5.txt  densinc-base-1.txt  (+9 more)
utest/: CMakeLists.txt  block_test.cpp  grid_test.cpp  proargs_test.cpp
(+20 files in other folders)
